# The_world_of_swords_and_magic

./: CMakeLists.txt  README.md
docs/: job_list.md  using.md
include/: AllHeaders.h  Event.h  Mode.h  SFMLUI.h  Tools.h  UserIO.h
include/battle/: Creature.h  Effect.h  EffectType.h  Summoner.h
scripts/: git.bat  main.bat
src/: Creature.cpp  Effect.cpp  Event.cpp  Mode.cpp  SFMLUI.cpp  Summoner.cpp  Tools.cpp  UserIO.cpp  main.cpp
